tests/neg/i13846.check
-- Error: tests/neg/i13846.scala:3:22 ----------------------------------------------------------------------------------
3 |def foo(): Int throws ArithmeticException = 1 / 0 // error
  |                      ^^^^^^^^^^^^^^^^^^^
  |                      throws clause cannot be defined for RuntimeException
-- Error: tests/neg/i13846.scala:7:9 -----------------------------------------------------------------------------------
7 |    foo() // error
  |         ^
  |        The capability to throw exception ArithmeticException is missing.
  |        The capability can be provided by one of the following:
  |         - Adding a using clause `(using CanThrow[ArithmeticException])` to the definition of the enclosing method
  |         - Adding `throws ArithmeticException` clause after the result type of the enclosing method
  |         - Wrapping this piece of code with a `try` block that catches ArithmeticException
  |
  |        The following import might fix the problem:
  |
  |          import unsafeExceptions.canThrowAny
  |
